assets/css/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    /* remove webkit styles */
    /* border: 1px solid black; */
}

:root {
    --colour-primary-teal: #008080;
    --colour-primary-teal-gradient: #008080, #003838;
    --font-family-header: 'Lilita One', cursive;
    --font-family-Body: 'Roboto', sans-serif;
    --colour-white: #fff;
    --container-width: min(80%, 1700px);
    /* width will be 80% or 1440px max */
    --unit-100vh: 100vh;
}

/* CREDIT: DREW BAKER, STACK OVERFLOW  */
/* https://stackoverflow.com/questions/58886797/how-to-access-the-real-100vh-on-ios-in-css */
@supports (height: 100dvh) {
    :root {
        --unit-100vh: 100dvh;
    }
}

#container {
    /* width: var(--container-width); width will be 80% or 1440px max */
    margin: auto;
    height: var(--unit-100vh);
    position: relative;
}

header {
    height: 100px;
    background-image: linear-gradient(180deg, var(--colour-primary-teal-gradient));
}

#content-wrapper {
    /* padding-bottom: 100px; */
    display: flex;
    flex-direction: column;
}

#container-header {
    width: var(--container-width);
    margin: auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 100%;
}

main {
    display: flex;
    align-items: center;
    justify-content: center;
    height: calc(var(--unit-100vh) - 200px);
    /* MINUS FOOTER HEIGHT */
    /* border: 2px solid red; */
    /* align-items: stretch; */
}

#container-content {
    width: var(--container-width);
    margin: auto;
    height: 100%;
    display: flex;
    align-items: center;
    position: relative;
}

#nav-logo {
    font: 3em var(--font-family-header)
}

#nav-logo a {
    text-decoration: none;
    color: var(--colour-white);
}

nav {
    width: 30%;
}

nav ul {
    display: flex;
    justify-content: space-between;
    list-style: none;
    font: 1.5em var(--font-family-header);
    color: var(--colour-white);
    /* width: 500px; */
}

nav a {
    text-decoration: none;
}

footer {
    height: 100px;
    width: 100%;
    position: absolute;
    bottom: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: linear-gradient(180deg, var(--colour-primary-teal-gradient));
}

#map {
    height: 90%;
    width: 100%;
    /* border: 1px solid black; */
    border-radius: 0px 20px 20px 0px;
}

#content-underlay {
    width: 100%;
    height: 90%;
    /* border: 5px solid red; */
    position: absolute;
    z-index: -1;
    box-shadow: 0px 4px 12px 2px rgba(0, 0, 0, 0.25);
    border-radius: 20px;
}

#search-container {
    height: 90%;
    width: 40%;
    max-width: 350px;
    min-width: 200px;
    padding: 15px;
    /* border: 1px solid red; */
}

#search {
    height: 45px;
    width: 100%;
    border-radius: 100px;
    border: 1px solid var(--colour-primary-teal);
    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.18);
    padding-inline: 15px;
    font-size: 16px;
}

#search:focus-visible {
    outline: 2px solid var(--colour-primary-teal);
}

.footer-icon {
    height: 35px;
}

footer a {
    margin-inline: 15px;
}

#drawer-chevron-container {
    display: none;
}

#search-container-results {
    height: inherit;
    overflow: scroll;
}

.attractionListInfoDiv {
    font: 12px var(--font-family-Body);
    padding: 15px 0;
    border-bottom: 1px solid #cecece;
}

h4 {
    font: 16px var(--font-family-header);
    color: var(--colour-primary-teal);
}

/* TABLET */
@media (max-width: 1024px) {
    nav {
        width: 45%;
    }

    header {
        height: 65px;
    }

    main {
        height: calc(var(--unit-100vh) - 130px);
        /* MINUS HEADER + FOOTER HEIGHT */
    }

    footer {
        height: 65px;
    }

    #container-header {
        width: 90%;
    }

    #container-content {
        width: 90%;
    }
}

@media (max-width: 768px) {

    /* nav {
        width: 55%;
    } */
    nav ul {
        font-size: 1.2em;
    }
}

/* MOBILE */
@media (max-width: 550px) {
    /* nav {
        width: 55%;
    } */

    header {
        height: 50px;
    }

    nav ul {
        font-size: 1em;
    }

    #nav-logo {
        font-size: 1.6em;
    }

    footer {
        height: 50px;
        box-shadow: 0px -4px 12px 1px rgba(0, 0, 0, 0.25);
        z-index: 1;
    }

    .footer-icon {
        height: 25px;
    }

    main {
        height: calc(var(--unit-100vh) - 100px);
        /* MINUS HEADER + FOOTER HEIGHT */
    }

    /* REPOSITION SEARCH CONTAINER TO MAKE DRAWER */
    #search-container {
        position: absolute;
        bottom: 0;
        z-index: 1;
        background-color: var(--colour-white);
        min-width: 100%;
        height: 60px;
        border-radius: 20px 20px 0px 0px;
        box-shadow: 0px 4px 12px 2px rgba(0, 0, 0, 0.25);
        display: flex;
        flex-direction: column;
    }

    #search-container-head {
        width: 100%;
        display: flex;
        flex-direction: column;
    }

    #search-container.search-container-open {
        height: auto;
    }

    #search-container-results {
        height: 0.1px;
        transition: height 0.3s;
    }

    #search-container-results.search-container-results-open {
        height: 400px;
    }

    #search {
        display: none;
    }

    #search.search-open {
        display: block;
        margin: 10px 0;
    }

    #container-content {
        width: 100%;
    }

    /* EXTEND MAP SIZE FOR SMALL SCREENS */
    #map {
        width: 100%;
        height: 100%;
        border-radius: 0px;
    }

    /* REMOVE MAP CONTROLS FOR SMALL SCREENS */
    .gmnoprint,
    .gm-control-active,
    .gm-fullscreen-control {
        display: none;
    }

    #drawer-chevron-container {
        display: block;
        margin-inline: auto;
    }

    #drawer-chevron {
        height: 30px;
        transition: transform 0.3s;
    }

    #drawer-chevron.drawer-chevron-open {
        transform: rotate(180deg);
    }



}

@media (max-width: 395px) {
    nav ul {
        font-size: 0.8em;
    }
}

